<resources>
    <string name="app_name">MyNotes</string>
    <string name="logout">Logout</string>
    <string name="support">Support</string>
    <string name="general">General</string>
    <string name="notes">notes</string>
    <string name="addnotes">addNotes</string>
    <string name="sync">sync</string>
    <string name="rating">rating</string>
    <string name="shareapp">shareApp</string>
    <string name="logoutnow">logout</string>
    <string name="open" />
    <string name="close" />
    <string name="settings">Settings</string>
    <string name="title_activity_notes_deatils">NotesDeatils</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_notes">AddNotes</string>
    <string name="enter_your_notes_here">Enter Your Notes Here</string>
    <string name="switchacc">Switch</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sync_now">Sync Now</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_new_account">Create New Account</string>
</resources>